# bloggy

./: .gitignore  .report.json  Dockerfile  README.md  app.py  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt  runtests.sh  test.sh  tests.http
.github/workflows/: test-coverage.yml
posts/: hello-world.md
posts/2025/7/: 2025-07-27-test.md  2025-07-28-pomodoro-technik.md  2025-07-28-test-post.md
src/bloggy/: app.py
src/bloggy/templates/: archive.html  archive_overview.html  base.html  index.html  post.html
templates/: archive.html  archive_overview.html  index.html
tests/: conftest.py  test_app.py
